--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
                         price: formData.price || formData.duration || 'غير محدد'
                     });
                     
-                    window.location.href = `./payments-spa.html?${params.toString()}`;
+                    window.location.href = window.location.href = `https://hamzaa556.github.io/Booking-page/payments-spa.html?${params.toString()}`;
                 }, 2000);
             })
             .catch(error => {
