--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
             { 
                 name: "الكابتن أحمد", 
                 nameEn: "Captain Ahmed",
-                img: "https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250703-WA0009_kaxogw.jpg
                 rating: 5, 
                 age: 26, 
                 nationality: "مصر🇪🇬", 
