--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
             { 
                 name: "الكابتن أحمد", 
                 nameEn: "Captain Ahmed",
-                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250703-WA0009_kaxogw.jpg
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250703-WA0009_kaxogw.jpg",
                 rating: 5, 
                 age: 26, 
                 nationality: "مصر🇪🇬", 
