--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
             { 
                 name: "الكابتن محمود", 
                 nameEn: "Captain Mahmoud",
-                img: "https://images.unsplash.com/photo-1607990281513-2c110a25bd8c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252944/IMG-20250708-WA0003_sakfae.jpg", 
                 rating: 5, 
                 age: 20, 
                 nationality: "سوريا🇸🇾", 
