--- a/index.html
+++ b/index.html
@@ -852,8 +852,8 @@
             },
             { 
                 name: "الكابتن يوسف", 
-                nameEn: "Captain Youssef",
-                img: "https://images.unsplash.com/photo-1582750433449-648ed127bb54?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
+                nameEn: "Captain Youssef
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252944/IMG-20250627-WA0005_zaae3m.jpg",    
                 rating: 5, 
                 age: 27, 
                 nationality: "مصر🇪🇬", 
