--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
             },
             { 
                 name: "الكابتن يوسف", 
-                nameEn: "Captain Youssef
+                nameEn: "Captain Youssef",
                 img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252944/IMG-20250627-WA0005_zaae3m.jpg",    
                 rating: 5, 
                 age: 27, 
