--- a/index.html
+++ b/index.html
@@ -862,10 +862,10 @@
                 locationEn: "Sharjah"
             },
             { 
-                name: "الكابتن سامي", 
-                nameEn: "Captain Sami",
-                img: "https://images.unsplash.com/photo-1584999734482-0361aecad844?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
-                rating: 4, 
+                name: "الكابتن مؤيد", 
+                nameEn: "Captain moaayd",
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250710-WA0008_zj44l5.jpg", 
+                rating: 5, 
                 age: 23, 
                 nationality: "سوريا🇸🇾", 
                 nationalityEn: "Syria🇸🇾",
@@ -875,30 +875,30 @@
             { 
                 name: "الكابتن علي", 
                 nameEn: "Captain Ali",
-                img: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252944/IMG-20250422-WA0035_ofgs03.jpg", 
                 rating: 4, 
-                age: 24, 
+                age: 20, 
                 nationality: "سوريا🇸🇾", 
                 nationalityEn: "Syria🇸🇾",
                 location: "الشارقة",
                 locationEn: "Sharjah"
             },
             { 
-                name: "الكابتن بركات", 
-                nameEn: "Captain Barakat",
-                img: "https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
-                rating: 1, 
+                name: "الكابتن عبدالله", 
+                nameEn: "Captain Abdullah",
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252944/IMG-20250710-WA0007_reyxia.jpg", 
+                rating: 5, 
                 holiday: true, 
-                age: 20, 
-                nationality: "مصر🇪🇬", 
-                nationalityEn: "Egypt🇪🇬",
+                age: 24, 
+                nationality: "سوريا🇸🇾", 
+                nationalityEn: "syria🇸🇾",
                 location: "الشارقة",
                 locationEn: "Sharjah"
             },
             { 
                 name: "الكابتن رامي", 
                 nameEn: "Captain Rami",
-                img: "https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250706-WA0004_wnigkj.jpg", 
                 rating: 4, 
                 age: 27, 
                 nationality: "الأردن🇯🇴", 
@@ -908,19 +908,19 @@
             },
             { 
                 name: "الكابتن غيث", 
-                nameEn: "Captain Ghaith",
-                img: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
-                rating: 5, 
+                nameEn: "Captain Gaith",
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250421-WA0076_lb7yix.jpg", 
+                rating: 3, 
                 age: 23, 
-                nationality: "مصر🇪🇬", 
-                nationalityEn: "Egypt🇪🇬",
+                nationality: "سوريا🇸🇾", 
+                nationalityEn: "syria🇸🇾",
                 location: "الشارقة",
                 locationEn: "Sharjah"
             },
             { 
                 name: "الكابتن وليد", 
                 nameEn: "Captain Waleed",
-                img: "https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252944/IMG-20250627-WA0017_zqghir.jpg", 
                 rating: 5, 
                 age: 22, 
                 nationality: "مصر🇪🇬", 
@@ -931,7 +931,7 @@
             { 
                 name: "الكابتن أيهم", 
                 nameEn: "Captain Ayham",
-                img: "https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=300&q=80", 
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250706-WA0004_wnigkj.jpg", 
                 rating: 4, 
                 age: 21, 
                 nationality: "سوريا🇸🇾", 
