--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
             },
             { 
                 name: "الكابتن مؤيد", 
-                nameEn: "Captain moaayd",
+                nameEn: "Captain Moaayd",
                 img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250710-WA0008_zj44l5.jpg", 
                 rating: 5, 
                 age: 23, 
@@ -873,8 +873,8 @@
                 locationEn: "Ajman"
             },
             { 
-                name: "الكابتن علي", 
-                nameEn: "Captain Ali",
+                name: "الكابتن يزن", 
+                nameEn: "Captain Yazan",
                 img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252944/IMG-20250422-WA0035_ofgs03.jpg", 
                 rating: 4, 
                 age: 20, 
@@ -907,8 +907,8 @@
                 locationEn: "Dubai"
             },
             { 
-                name: "الكابتن غيث", 
-                nameEn: "Captain Gaith",
+                name: "الكابتن وتين", 
+                nameEn: "Captain Waten",
                 img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250421-WA0076_lb7yix.jpg", 
                 rating: 3, 
                 age: 23, 
