--- a/index.html
+++ b/index.html
@@ -880,15 +880,14 @@
                 age: 20, 
                 nationality: "سوريا🇸🇾", 
                 nationalityEn: "Syria🇸🇾",
-                location: "الشارقة",
-                locationEn: "Sharjah"
+                location: "عجمان",
+                locationEn: "Ajman"
             },
             { 
                 name: "الكابتن عبدالله", 
                 nameEn: "Captain Abdullah",
                 img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252944/IMG-20250710-WA0007_reyxia.jpg", 
                 rating: 5, 
-                holiday: true, 
                 age: 24, 
                 nationality: "سوريا🇸🇾", 
                 nationalityEn: "syria🇸🇾",
@@ -932,12 +931,13 @@
                 name: "الكابتن أيهم", 
                 nameEn: "Captain Ayham",
                 img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250706-WA0004_wnigkj.jpg", 
-                rating: 4, 
-                age: 21, 
+                rating: 1, 
+                holiday: true,
+                age: 28, 
                 nationality: "سوريا🇸🇾", 
                 nationalityEn: "Syria🇸🇾",
-                location: "عجمان",
-                locationEn: "Ajman"
+                location: "دبي",
+                locationEn: "Dubai"
             }
         ];
 
