--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
             { 
                 name: "الكابتن وتين", 
                 nameEn: "Captain Waten",
-                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250421-WA0076_lb7yix.jpg", 
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752279265/FB_IMG_1752277025359_idr9s4.jpg", 
                 rating: 3, 
                 age: 23, 
                 nationality: "سوريا🇸🇾", 
@@ -928,18 +928,19 @@
                 locationEn: "Sharjah"
             },
             { 
-                name: "الكابتن أيهم", 
-                nameEn: "Captain Ayham",
-                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752252945/IMG-20250706-WA0004_wnigkj.jpg", 
+                name: "الكابتن خالد", 
+                nameEn: "Captain khalid",
+                img: "https://res.cloudinary.com/dree7qwtx/image/upload/v1752279669/IMG-20250614-WA0070_nlmu8k.jpg", 
                 rating: 1, 
                 holiday: true,
-                age: 28, 
+                age: 25, 
                 nationality: "سوريا🇸🇾", 
                 nationalityEn: "Syria🇸🇾",
-                location: "دبي",
-                locationEn: "Dubai"
-            }
-        ];
+                location: "الشارقة",
+                locationEn: "Sharjah"
+            }, 
+            {               
+               ];
 
         let selectedCaptain = {
             salon: null,
